--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
   - pip install --user gcovr cpp-coveralls
 script: make test
 after_success:
-  make cov
-  coveralls --exclude test
+  - make cov
+  - coveralls --exclude test
